cmake_minimum_required(VERSION 3.25)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(pointer_pointer1 pointer/pointer1.cpp)
add_executable(pointer_pointer2 pointer/pointer2.cpp)
add_executable(pointer_array_pointer1 pointer/array_pointer1.cpp)
add_executable(pointer_array_pointer2 pointer/array_pointer2.cpp)
add_executable(pointer_array_pointer3 pointer/array_pointer3.cpp)
add_executable(pointer_array_pointer4 pointer/array_pointer4.cpp)
add_executable(pointer_array_pointer5 pointer/array_pointer5.cpp)
add_executable(pointer_array_pointer6 pointer/array_pointer6.cpp)
add_executable(pointer_array_pointer7 pointer/array_pointer7.cpp)
add_executable(pointer_array_pointer8 pointer/array_pointer8.cpp)
add_executable(pointer_array_pointer9 pointer/array_pointer9.cpp)
add_executable(pointer_pointer_array1 pointer/pointer_array1.cpp)
add_executable(pointer_pointer_array2 pointer/pointer_array2.cpp)
add_executable(pointer_pointer_array3 pointer/pointer_array3.cpp)
add_executable(pointer_question1 pointer/question1.cpp)
add_executable(pointer_question2 pointer/question2.cpp)
add_executable(pointer_question3 pointer/question3.cpp)
add_executable(pointer_question4 pointer/question4.cpp)
add_executable(pointer_question5 pointer/question5.cpp)
add_executable(pointer_question6 pointer/question6.cpp)
add_executable(pointer_question7 pointer/question7.cpp)