cmake_minimum_required(VERSION 3.25)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(pointer_pointer1 pointer/pointer1.cpp)
add_executable(pointer_pointer2 pointer/pointer2.cpp)
add_executable(pointer_array_pointer1 pointer/array_pointer1.cpp)
add_executable(pointer_array_pointer2 pointer/array_pointer2.cpp)
add_executable(pointer_array_pointer3 pointer/array_pointer3.cpp)
add_executable(pointer_array_pointer4 pointer/array_pointer4.cpp)
add_executable(pointer_array_pointer5 pointer/array_pointer5.cpp)
add_executable(pointer_array_pointer6 pointer/array_pointer6.cpp)
add_executable(pointer_array_pointer7 pointer/array_pointer7.cpp)
add_executable(pointer_array_pointer8 pointer/array_pointer8.cpp)
add_executable(pointer_array_pointer9 pointer/array_pointer9.cpp)
add_executable(pointer_pointer_array1 pointer/pointer_array1.cpp)
add_executable(pointer_pointer_array2 pointer/pointer_array2.cpp)
add_executable(pointer_pointer_array3 pointer/pointer_array3.cpp)
add_executable(pointer_question1 pointer/question1.cpp)
add_executable(pointer_question2 pointer/question2.cpp)
add_executable(pointer_question3 pointer/question3.cpp)
add_executable(pointer_question4 pointer/question4.cpp)
add_executable(pointer_question5 pointer/question5.cpp)
add_executable(pointer_question6 pointer/question6.cpp)
add_executable(pointer_question7 pointer/question7.cpp)
add_executable(function_function1 function/function1.cpp)
add_executable(function_function2 function/function2.cpp)
add_executable(function_value_reference1 function/value_reference1.cpp)
add_executable(function_prototype function/prototype.cpp)
add_executable(function_recursion1 function/recursion1.cpp)
add_executable(function_recursion2 function/recursion2.cpp)
add_executable(function_array_function1 function/array_function1.cpp)
add_executable(function_array_function2 function/array_function2.cpp)
add_executable(function_question1 function/question1.cpp)
add_executable(function_question2 function/question2.cpp)
add_executable(function_question3 function/question3.cpp)
add_executable(function_question4 function/question4.cpp)
add_executable(struct_typedef1 struct/typedef1.cpp)
add_executable(struct_typedef2 struct/typedef2.cpp)
add_executable(struct_struct1 struct/struct1.cpp)
add_executable(struct_struct2 struct/struct2.cpp)
add_executable(struct_struct_pointer1 struct/struct_pointer1.cpp)
add_executable(struct_struct_pointer2 struct/struct_pointer2.cpp)
add_executable(struct_struct_pointer3 struct/struct_pointer3.cpp)
add_executable(struct_struct_function1 struct/struct_function1.cpp)
add_executable(struct_struct_function2 struct/struct_function2.cpp)
add_executable(struct_question1 struct/question1.cpp)
add_executable(struct_question2 struct/question2.cpp)
add_executable(c_const1 c/const1.cpp)
add_executable(c_enum1 c/enum1.cpp)
add_executable(c_macro1 c/macro1.cpp)
add_executable(c_macro2 c/macro2.cpp)
add_executable(c_macro3 c/macro3.cpp)
add_executable(c_macro4 c/macro4.cpp)
add_executable(c_bit1 c/bit1.cpp)
add_executable(c_bit2 c/bit2.cpp)
add_executable(cpp_input_output1 cpp/input_output1.cpp)
add_executable(cpp_input_output2 cpp/input_output2.cpp)
add_executable(cpp_grammer cpp/grammer.cpp)
add_executable(cpp_function1 cpp/function1.cpp)
add_executable(cpp_function2 cpp/function2.cpp)
add_executable(cpp_question1 cpp/question1.cpp)
add_executable(class_namespace1 class/namespace1.cpp)
add_executable(class_namespace2 class/namespace2.cpp)
add_executable(class_namespace3 class/namespace3.cpp)
add_executable(class_class_struct1 class/class_struct1.cpp)
add_executable(class_this_pointer1 class/this_pointer1.cpp)